--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "start": "react-scripts start",
+    "postinstall": "tsc",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
