--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-scripts": "4.0.1",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "dev": "react-scripts start",
