--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react"
   },
   "include": [
     "src"
   ],
-   "typeRoots": [
-            "../node_modules/@types",
-            "../@types"
-        ]
+  "typeRoots": [
+    "../node_modules/@types",
+    "../@types"
+  ]
 }
