--- a/api/webasoapi/package.json
+++ b/api/webasoapi/package.json
@@ -12,5 +12,11 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1"
   },
-  "type": "module"
+  "type": "module",
+  "nodemonConfig": {
+    "ignore": [
+      ".json",
+      ".log"
+    ]
+  }
 }
