--- a/api/webasoapi/package.json
+++ b/api/webasoapi/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "winston": "^3.3.3"
   },
   "type": "module",
   "nodemonConfig": {
