--- a/api/webasoapi/package.json
+++ b/api/webasoapi/package.json
@@ -9,6 +9,7 @@
   "author": "Sadu Toledo de Souza",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "winston": "^3.3.3"
